--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,9 @@
 :root {
     --paddingFromSide: 120px
 }
-
+a{
+    text-decoration:none;
+}
 body {
     background-color: #121212;
     font-family: Inter, sans-serif;
